# hypermodern-python-course

./: .coverage  .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  test.yml
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: index.rst.txt  reference.rst.txt
src/hypermodern_python_course/: __init__.py  console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
