[tool.poetry]
name = "hypermodern-python-course"
version = "0.1.0"
authors = ["Oleksandr Vodolazskyi <o_vodolazskyi@wargaming.net>"]
description = "The hypermodern Python course"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Vodolazskyi/hypermodern-python-course"
repository = "https://github.com/Vodolazskyi/hypermodern-python-course"
keywords = ["hypermoderncourse"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python-course = "hypermodern_python_course.console:main"
