[tool.poetry]
name = "hypermodern-python-course"
version = "0.1.0"
authors = ["Oleksandr Vodolazskyi <o_vodolazskyi@wargaming.net>"]
description = "The hypermodern Python course"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Vodolazskyi/hypermodern-python-course"
repository = "https://github.com/Vodolazskyi/hypermodern-python-course"
keywords = ["hypermoderncourse"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"
coverage = {version = "^5.3", extras = ["toml"]}
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python-course = "hypermodern_python_course.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python_course"]

[tool.coverage.report]
show_missing = true